[gd_scene load_steps=4 format=3 uid="uid://btmk56cr5usdp"]

[ext_resource type="AudioStream" uid="uid://drfl07ssfkxlv" path="res://audio/sounds/bump.ogg" id="1_682ud"]
[ext_resource type="Theme" uid="uid://co08a2cr03n28" path="res://resources/main_theme.tres" id="1_ylqeh"]
[ext_resource type="Script" path="res://scenes/time_out_popup.gd" id="2_hnkpg"]

[node name="TimeOutPopup" type="Window"]
title = "Aeg l채bi"
initial_position = 5
size = Vector2i(260, 200)
exclusive = true
unresizable = true
always_on_top = true
popup_window = true
theme = ExtResource("1_ylqeh")
script = ExtResource("2_hnkpg")

[node name="AlertSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_682ud")
volume_db = 5.0
autoplay = true

[node name="Control" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Aeg on 체mber!"
horizontal_alignment = 1

[node name="DescriptiveLabel" type="Label" parent="Control/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Taimeri %s aeg on l채bi. Tee midagi!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="HSeparator" type="HSeparator" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="RestartButton" type="Button" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "K채ivita uuesti"

[node name="CloseButton" type="Button" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Pane kinni"
